--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Description: My personal website theme
 Author: Irale Usman
 Author URI: http://usman.com.ng
 Version: 1.0
-Tags: your, tags, here
+Tags: html, blog, person website
 .
 Add any comments here!
 .
